--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ REACT_APP_STOTAGEBUCKET=""
 REACT_APP_MESSAGEING_SENDER_ID=""
 REACT_APP_APP_ID=""
 REACT_APP_MEASUREMENT_ID=""
+
+SKIP_PREFLIGHT_CHECK=true
